--- a/templates/base.html
+++ b/templates/base.html
@@ -40,13 +40,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('chat') }}">
-                            <i class="bi bi-chat-dots"></i> AI Chat
+                        <a class="nav-link" href="{{ url_for('project_overview') }}">
+                            <i class="bi bi-diagram-3"></i> Project
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('project_overview') }}">
-                            <i class="bi bi-diagram-3"></i> Project
+                        <a class="nav-link" href="{{ url_for('streaming_demo') }}">
+                            <i class="bi bi-magic"></i> AI Streaming
                         </a>
                     </li>
                 </ul>
