--- a/templates/index.html
+++ b/templates/index.html
@@ -182,6 +182,9 @@
                             <button class="btn btn-sm btn-outline-primary" onclick="quickChatMessage('Fix navigation')">
                                 Fix navigation
                             </button>
+                            <a href="/streaming-demo" class="btn btn-sm btn-warning">
+                                <i class="bi bi-magic me-1"></i>Try AI Streaming Demo
+                            </a>
                         </div>
                     </div>
                     
